lib/src/pq/generated_bindings_pq.dart


  int __stdio_common_vsprintf_p(
    int _Options,
    ffi.Pointer<ffi.Char> _Buffer,
    int _BufferCount,
    ffi.Pointer<ffi.Char> _Format,
    _locale_t _Locale,
    va_list _ArgList,
  ) {
    return ___stdio_common_vsprintf_p(
      _Options,
      _Buffer,
      _BufferCount,
      _Format,
      _Locale,
      _ArgList,
    );
  }

  late final ___stdio_common_vsprintf_pPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.UnsignedLongLong,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              _locale_t,
              va_list)>>('__stdio_common_vsprintf_p');
  late final ___stdio_common_vsprintf_p =
      ___stdio_common_vsprintf_pPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>,
              _locale_t, va_list)>();

  int __stdio_common_vsscanf(
    int _Options,
    ffi.Pointer<ffi.Char> _Buffer,
    int _BufferCount,
    ffi.Pointer<ffi.Char> _Format,
    _locale_t _Locale,
    va_list _ArgList,
  ) {
    return ___stdio_common_vsscanf(
      _Options,
      _Buffer,
      _BufferCount,
      _Format,
      _Locale,
      _ArgList,
    );
  }

  late final ___stdio_common_vsscanfPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.UnsignedLongLong,
              ffi.Pointer<ffi.Char>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              _locale_t,
              va_list)>>('__stdio_common_vsscanf');
  late final ___stdio_common_vsscanf = ___stdio_common_vsscanfPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>,
          _locale_t, va_list)>();

  ffi.Pointer<ffi.Char> tempnam(
    ffi.Pointer<ffi.Char> _Directory,
    ffi.Pointer<ffi.Char> _FilePrefix,
  ) {
    return _tempnam1(
      _Directory,
      _FilePrefix,
    );
  }

  late final _tempnamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('tempnam');
  late final _tempnam1 = _tempnamPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int fcloseall() {
    return _fcloseall1();
  }

  late final _fcloseallPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('fcloseall');
  late final _fcloseall1 = _fcloseallPtr.asFunction<int Function()>();

  ffi.Pointer<FILE> fdopen(
    int _FileHandle,
    ffi.Pointer<ffi.Char> _Format,
  ) {
    return _fdopen1(
      _FileHandle,
      _Format,
    );
  }

  late final _fdopenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FILE> Function(
              ffi.Int, ffi.Pointer<ffi.Char>)>>('fdopen');
  late final _fdopen1 = _fdopenPtr
      .asFunction<ffi.Pointer<FILE> Function(int, ffi.Pointer<ffi.Char>)>();

  int fgetchar() {
    return _fgetchar1();
  }

  late final _fgetcharPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('fgetchar');
  late final _fgetchar1 = _fgetcharPtr.asFunction<int Function()>();

  int fileno(
    ffi.Pointer<FILE> _Stream,
  ) {
    return _fileno1(
      _Stream,
    );
  }

  late final _filenoPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<FILE>)>>(
          'fileno');
  late final _fileno1 =
      _filenoPtr.asFunction<int Function(ffi.Pointer<FILE>)>();

  int flushall() {
    return _flushall1();
  }

  late final _flushallPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('flushall');
  late final _flushall1 = _flushallPtr.asFunction<int Function()>();

  int fputchar(
    int _Ch,
  ) {
    return _fputchar1(
      _Ch,
    );
  }

  late final _fputcharPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('fputchar');
  late final _fputchar1 = _fputcharPtr.asFunction<int Function(int)>();

  int getw(
    ffi.Pointer<FILE> _Stream,
  ) {
    return _getw1(
      _Stream,
    );
  }

  late final _getwPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<FILE>)>>('getw');
  late final _getw1 = _getwPtr.asFunction<int Function(ffi.Pointer<FILE>)>();

  int putw(
    int _Ch,
    ffi.Pointer<FILE> _Stream,
  ) {
    return _putw1(
      _Ch,
      _Stream,
    );
  }

  late final _putwPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<FILE>)>>(
          'putw');
  late final _putw1 =
      _putwPtr.asFunction<int Function(int, ffi.Pointer<FILE>)>();

  int rmtmp() {
    return _rmtmp1();
  }

  late final _rmtmpPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('rmtmp');
  late final _rmtmp1 = _rmtmpPtr.asFunction<int Function()>();

  ffi.Pointer<PGconn> PQconnectStart(
    ffi.Pointer<ffi.Char> conninfo,
  ) {
    return _PQconnectStart(
      conninfo,
    );
  }

  late final _PQconnectStartPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Char>)>>(
      'PQconnectStart');
  late final _PQconnectStart = _PQconnectStartPtr.asFunction<
      ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGconn> PQconnectStartParams(
    ffi.Pointer<ffi.Pointer<ffi.Char>> keywords,
    ffi.Pointer<ffi.Pointer<ffi.Char>> values,
    int expand_dbname,
  ) {
    return _PQconnectStartParams(
      keywords,
      values,
      expand_dbname,
    );
  }

  late final _PQconnectStartParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGconn> Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Int)>>('PQconnectStartParams');
  late final _PQconnectStartParams = _PQconnectStartParamsPtr.asFunction<
      ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int PQconnectPoll(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconnectPoll(
      conn,
    );
  }

  late final _PQconnectPollPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>)>>(
          'PQconnectPoll');
  late final _PQconnectPoll =
      _PQconnectPollPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PGconn> PQconnectdb(
    ffi.Pointer<ffi.Char> conninfo,
  ) {
    return _PQconnectdb(
      conninfo,
    );
  }

  late final _PQconnectdbPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Char>)>>('PQconnectdb');
  late final _PQconnectdb = _PQconnectdbPtr.asFunction<
      ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGconn> PQconnectdbParams(
    ffi.Pointer<ffi.Pointer<ffi.Char>> keywords,
    ffi.Pointer<ffi.Pointer<ffi.Char>> values,
    int expand_dbname,
  ) {
    return _PQconnectdbParams(
      keywords,
      values,
      expand_dbname,
    );
  }

  late final _PQconnectdbParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGconn> Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Int)>>('PQconnectdbParams');
  late final _PQconnectdbParams = _PQconnectdbParamsPtr.asFunction<
      ffi.Pointer<PGconn> Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  ffi.Pointer<PGconn> PQsetdbLogin(
    ffi.Pointer<ffi.Char> pghost,
    ffi.Pointer<ffi.Char> pgport,
    ffi.Pointer<ffi.Char> pgoptions,
    ffi.Pointer<ffi.Char> pgtty,
    ffi.Pointer<ffi.Char> dbName,
    ffi.Pointer<ffi.Char> login,
    ffi.Pointer<ffi.Char> pwd,
  ) {
    return _PQsetdbLogin(
      pghost,
      pgport,
      pgoptions,
      pgtty,
      dbName,
      login,
      pwd,
    );
  }

  late final _PQsetdbLoginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGconn> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PQsetdbLogin');
  late final _PQsetdbLogin = _PQsetdbLoginPtr.asFunction<
      ffi.Pointer<PGconn> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void PQfinish(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQfinish(
      conn,
    );
  }

  late final _PQfinishPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGconn>)>>(
          'PQfinish');
  late final _PQfinish =
      _PQfinishPtr.asFunction<void Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PQconninfoOption> PQconndefaults() {
    return _PQconndefaults();
  }

  late final _PQconndefaultsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<PQconninfoOption> Function()>>(
          'PQconndefaults');
  late final _PQconndefaults =
      _PQconndefaultsPtr.asFunction<ffi.Pointer<PQconninfoOption> Function()>();

  ffi.Pointer<PQconninfoOption> PQconninfoParse(
    ffi.Pointer<ffi.Char> conninfo,
    ffi.Pointer<ffi.Pointer<ffi.Char>> errmsg,
  ) {
    return _PQconninfoParse(
      conninfo,
      errmsg,
    );
  }

  late final _PQconninfoParsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PQconninfoOption> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('PQconninfoParse');
  late final _PQconninfoParse = _PQconninfoParsePtr.asFunction<
      ffi.Pointer<PQconninfoOption> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<PQconninfoOption> PQconninfo(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconninfo(
      conn,
    );
  }

  late final _PQconninfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PQconninfoOption> Function(
              ffi.Pointer<PGconn>)>>('PQconninfo');
  late final _PQconninfo = _PQconninfoPtr.asFunction<
      ffi.Pointer<PQconninfoOption> Function(ffi.Pointer<PGconn>)>();

  void PQconninfoFree(
    ffi.Pointer<PQconninfoOption> connOptions,
  ) {
    return _PQconninfoFree(
      connOptions,
    );
  }

  late final _PQconninfoFreePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PQconninfoOption>)>>(
      'PQconninfoFree');
  late final _PQconninfoFree = _PQconninfoFreePtr.asFunction<
      void Function(ffi.Pointer<PQconninfoOption>)>();

  int PQresetStart(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQresetStart(
      conn,
    );
  }

  late final _PQresetStartPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQresetStart');
  late final _PQresetStart =
      _PQresetStartPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQresetPoll(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQresetPoll(
      conn,
    );
  }

  late final _PQresetPollPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>)>>(
          'PQresetPoll');
  late final _PQresetPoll =
      _PQresetPollPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  void PQreset(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQreset(
      conn,
    );
  }

  late final _PQresetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGconn>)>>(
          'PQreset');
  late final _PQreset =
      _PQresetPtr.asFunction<void Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<PGcancel> PQgetCancel(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQgetCancel(
      conn,
    );
  }

  late final _PQgetCancelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGcancel> Function(ffi.Pointer<PGconn>)>>('PQgetCancel');
  late final _PQgetCancel = _PQgetCancelPtr.asFunction<
      ffi.Pointer<PGcancel> Function(ffi.Pointer<PGconn>)>();

  void PQfreeCancel(
    ffi.Pointer<PGcancel> cancel,
  ) {
    return _PQfreeCancel(
      cancel,
    );
  }
